--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=In28Min Cloud Server
+spring.application.name=spring-cloud-config-server
+
+server.port=8888
+spring.cloud.config.server.git.uri=/home/clarke/Desktop/Answers/In28Min-Config-Server
