Enabled Config Server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+# Application
 spring.application.name=spring-cloud-config-server
-
 server.port=8888
-spring.cloud.config.server.git.uri=/home/clarke/Desktop/Answers/In28Min-Config-Server
+
+# Actuator
+management.endpoints.web.exposure.include=*
+
+# Spring Cloud Config
+spring.cloud.config.server.git.uri=file:///C:/Users/clark/GitRepo/LocalCloudConfig
+spring.cloud.config.server.git.default-label=master
