--- a/src/main/resources/urls.properties
+++ b/src/main/resources/urls.properties
@@ -20,5 +20,15 @@ Response Structure
     "environment": "8000 instance-id"
 }
 
-http://localhost:8100/currency-exchange/from/USD/to/INR/quantity/10
+Exchange Service
 http://localhost:8000/currency-exchange/from/USD/to/INR
+
+Conversion Service
+http://localhost:8100/currency-conversion/from/USD/to/INR/quantity/10
+http://localhost:8100/currency-conversion/from/USD/to/INR
+
+Eureka
+http://localhost:8761/
+
+API Gateway
+http://localhost:8765/currency-exchange/currency-exchange/from/USD/to/INR
